# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_even_logic.py  engine.py  games_logic.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  user_interaction.py  utils.py
brain_games/scripts/: brain_calc_script.py  brain_even.py  brain_even_script.py  brain_games.py  brain_gcd_script.py  brain_prime_script.py  brain_progression_script.py  brain_script_calc.py  brain_script_even.py  brain_script_gcd.py  brain_script_prime.py  brain_script_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
