[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Package features games conducted in a command line"
license = ["MIT"]
authors = ["Safar Galimzyanov <safargalimzyanov@protonmail.com>"]
maintainers = ["Safar Galimzyanov <safargalimzyanov@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/SafarGalimzyanov/python-project-49.git"
keywords = ["python", "command-line", "game"]
classifiers = [
	"Intended Audience :: End Users/Desktop",
	"License :: Freeware",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3.10"]
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_script_games:main"
brain-calc = "brain_games.scripts.brain_script_calc:main"
brain-even = "brain_games.scripts.brain_script_even:main"
brain-gcd = "brain_games.scripts.brain_script_gcd:main"
brain-prime = "brain_games.scripts.brain_script_prime:main"
brain-progression = "brain_games.scripts.brain_script_progression:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
